--- a/root/src/index.ejs
+++ b/root/src/index.ejs
@@ -53,7 +53,8 @@
       "imports": {
         "@codenapp/root-config": "//localhost:9000/codenapp-root-config.js",
         "@codenapp/app-01": "//localhost:8600/codenapp-app-01.js",
-        "@codenapp/app-02": "//localhost:8900/codenapp-app-02.js"
+        "@codenapp/app-02": "//localhost:8900/codenapp-app-02.js",
+        "@codenapp/app-03": "//localhost:8300/codenapp-app-03.js"
       }
     }
   </script>
